--- a/Example/Source/UI/Base.lproj/Control.storyboard
+++ b/Example/Source/UI/Base.lproj/Control.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xxw-ay-9Ic">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xxw-ay-9Ic">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -13,11 +13,11 @@
         <!--Local Node-->
         <scene sceneID="XJM-pf-bpe">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xxw-ay-9Ic" customClass="RootViewController" customModule="nRFMeshProvision_Example" customModuleProvider="target" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xxw-ay-9Ic" customClass="RootViewController" customModule="nRF_Mesh" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Local Node" image="tab_control_outline_black_24pt" id="6y7-KH-m0o"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" largeTitles="YES" id="Ihc-oA-91a">
-                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
+                        <rect key="frame" x="0.0" y="48" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.0" green="0.66274509800000003" blue="0.80784313730000001" alpha="1" colorSpace="calibratedRGB"/>
                         <textAttributes key="titleTextAttributes">
@@ -39,9 +39,9 @@
         <!--Local Node-->
         <scene sceneID="tW9-1O-Mih">
             <objects>
-                <collectionViewController id="E9W-n1-Wdt" customClass="ControlViewController" customModule="nRFMeshProvision_Example" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController id="E9W-n1-Wdt" customClass="ControlViewController" customModule="nRF_Mesh" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Urm-V3-iEi">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="804"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemGroupedBackgroundColor"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="U0e-mu-hcz">
@@ -51,7 +51,7 @@
                             <inset key="sectionInset" minX="16" minY="0.0" maxX="16" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="00001001" id="TEP-VO-Bjf" customClass="GenericOnOffClientCell" customModule="nRFMeshProvision_Example" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="00001001" id="TEP-VO-Bjf" customClass="GenericOnOffClientCell" customModule="nRF_Mesh" customModuleProvider="target">
                                 <rect key="frame" x="16" y="50" width="130" height="130"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="6Ok-dl-x1h">
@@ -105,7 +105,7 @@
                                     <outlet property="onButton" destination="LGq-Zr-OtD" id="nUv-yl-WNE"/>
                                 </connections>
                             </collectionViewCell>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="00001000" id="txW-pE-MsP" customClass="GenericOnOffServerCell" customModule="nRFMeshProvision_Example" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="00001000" id="txW-pE-MsP" customClass="GenericOnOffServerCell" customModule="nRF_Mesh" customModuleProvider="target">
                                 <rect key="frame" x="268" y="50" width="130" height="130"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="KDx-Nz-DhB">
@@ -129,7 +129,7 @@
                                     <outlet property="icon" destination="iL6-2P-Blm" id="PxH-Na-WMl"/>
                                 </connections>
                             </collectionViewCell>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="00001003" id="Axc-6v-6B2" customClass="GenericLevelClientCell" customModule="nRFMeshProvision_Example" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="00001003" id="Axc-6v-6B2" customClass="GenericLevelClientCell" customModule="nRF_Mesh" customModuleProvider="target">
                                 <rect key="frame" x="16" y="190" width="130" height="130"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="T0j-vx-REu">
@@ -185,7 +185,7 @@
                                     <outlet property="plusButton" destination="9Xt-K4-EIU" id="5lK-7s-Fwn"/>
                                 </connections>
                             </collectionViewCell>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="00001002" id="dEZ-Nh-6sy" customClass="GenericLevelServerCell" customModule="nRFMeshProvision_Example" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="00001002" id="dEZ-Nh-6sy" customClass="GenericLevelServerCell" customModule="nRF_Mesh" customModuleProvider="target">
                                 <rect key="frame" x="268" y="190" width="130" height="130"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="9tw-2h-HJs">
@@ -219,7 +219,7 @@
                                     <outlet property="icon" destination="KSw-i1-MGx" id="iXu-jC-jtn"/>
                                 </connections>
                             </collectionViewCell>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="00590001" id="XSm-FN-yJm" customClass="SimpleOnOffClientCell" customModule="nRFMeshProvision_Example" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="00590001" id="XSm-FN-yJm" customClass="SimpleOnOffClientCell" customModule="nRF_Mesh" customModuleProvider="target">
                                 <rect key="frame" x="16" y="330" width="130" height="130"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="WPp-KP-9Qd">
@@ -273,8 +273,49 @@
                                     <outlet property="onButton" destination="Oib-i6-1MV" id="9FY-bI-yWC"/>
                                 </connections>
                             </collectionViewCell>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="00591015" id="2iA-9n-oKk" customClass="GenericPropertyClientCell" customModule="nRF_Mesh" customModuleProvider="target">
+                                <rect key="frame" x="268" y="330" width="130" height="130"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="UbU-lC-l7n">
+                                    <rect key="frame" x="0.0" y="0.0" width="130" height="130"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="people-group" id="mhS-3G-Ojx">
+                                            <rect key="frame" x="-142" y="-337" width="414" height="804"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="leading" contentVerticalAlignment="bottom" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iw0-dI-ZXG">
+                                            <rect key="frame" x="0.0" y="82" width="122" height="48"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="48" id="1wN-Kr-Ed0"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                            <state key="normal" title="LISTENER"/>
+                                            <connections>
+                                                <action selector="listenerTapped:" destination="sDS-pe-rb0" eventType="touchUpInside" id="9jU-Vf-ntz"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="leading" contentVerticalAlignment="top" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FeN-ff-y8N">
+                                            <rect key="frame" x="33" y="0.0" width="65" height="48"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="48" id="9IG-Mb-BIb"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                            <state key="normal" title="OWNER"/>
+                                            <connections>
+                                                <action selector="ownerTapped:" destination="sDS-pe-rb0" eventType="touchUpInside" id="lig-2Y-398"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                </collectionViewCellContentView>
+                                <connections>
+                                    <outlet property="icon" destination="mhS-3G-Ojx" id="4mZ-sX-kz5"/>
+                                    <outlet property="listenerButton" destination="iw0-dI-ZXG" id="ntc-nX-CUO"/>
+                                    <outlet property="ownerButton" destination="FeN-ff-y8N" id="gUa-n3-Gfe"/>
+                                </connections>
+                            </collectionViewCell>
                         </cells>
-                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="element" id="NIO-oH-X2Q" customClass="ElementSectionView" customModule="nRFMeshProvision_Example" customModuleProvider="target">
+                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="element" id="NIO-oH-X2Q" customClass="ElementSectionView" customModule="nRF_Mesh" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="50"/>
                             <autoresizingMask key="autoresizingMask"/>
                             <subviews>
@@ -310,6 +351,7 @@
     <resources>
         <image name="groups_generic_level_outline" width="50" height="50"/>
         <image name="groups_generic_onoff_outline" width="50" height="50"/>
+        <image name="people-group" width="100" height="100"/>
         <image name="tab_control_outline_black_24pt" width="24" height="24"/>
         <systemColor name="secondarySystemGroupedBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
